--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h1><span class="text-green-600 mr-3"><i class="fa-brands fa-angellist ml-5 "></i></span>Srean Soksotheanith
             </h1>
             <h1><span class="text-green-600 mr-3"><i class="fa-brands fa-angellist ml-5 "></i></span>Sam Karona</h1>
-            <h1><span class="text-green-600 mr-3"><i class="fa-brands fa-angellist ml-5 "></i></span>Samban Bonnaroth
+            <h1><span class="text-green-600 mr-3"><i class="fa-brands fa-angellist ml-5 "></i></span>Saban Bunnaroth
             </h1>
             
         </div>
